# munkey

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml
.github/workflows/: pythonapp.yml
homepage/: models.py  navigation.py
homepage/migrations/: 0001_initial.py
homepage/templates/homepage/: home_page.html
munkey/: settings.py  urls.py  wsgi.py
navigation/: __init__.py  apps.py  context_processors.py  forms.py  links.py  urls.py  views.py  wagtail_hooks.py
navigation/static/navigation/js/: MUNkeyLINK.js
navigation/templates/navigation/: munkey-link-chooser.html  navigation.html
paper_management/: admin.py  apps.py  models.py  navigation.py  tests.py  urls.py  views.py
paper_management/migrations/: 0001_initial.py  0002_auto_20200206_1903.py  0003_auto_20200210_2216.py
paper_management/templates/paper_management/: index.html  paper_confirm_delete.html  paper_detail.html  paper_form.html  paper_list.html
templates/: base.html
templates/registration/: logged_out.html  login.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  register.html
user_management/: admin.py  forms.py  models.py  urls.py  views.py
user_management/migrations/: 0001_initial.py
