[tool.poetry]
name = "munkey"
version = "0.1.0"
description = "Software to manage MUN conferences"

authors = [
    "DMUN e.V. <support@dmun.de>"
]

[tool.poetry.dependencies]
python = "^3.6"
Django = "^2.0"
wagtail = "^2.8"
django-bootstrap4 = "^1.1.1"
django-environ = "^0.4.5"
mysqlclient = "^1.4.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
coverage = "^5.0.3"
coveralls = "^1.10.0"
